--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ figure {
     font-size: 14px;
 }
 
-#line {
+.line {
     width: 25%;
     height: 6px;
     background-color: grey;
@@ -53,14 +53,14 @@ figure {
 ul {
     list-style: none;
     font-family: 'Raleway', sans-serif;
-    position: absolute;
+    position: fixed;
     top: 10px;
     right: 30px;
     z-index: 10;
     cursor: pointer;
 }
 
-li{
+li {
     float: left;
     color: blue;
     padding-top: 5px;
@@ -71,9 +71,9 @@ li{
     font-size: 20px;
 }
 
-li:hover{
+li:hover {
     color: yellow;
-    
+
 }
 
 h1,
@@ -86,6 +86,9 @@ h3.mont {
     font-family: 'Montserrat', sans-serif;
 }
 
+h3.bucs {
+    text-indent: -10em;
+}
 
 .tbname:hover {
     color: #0f0;
@@ -105,10 +108,11 @@ h3.mont {
 
 a:link {
     color: #ffd54f;
+    text-decoration: none;
 }
 
 a:visited {
-    color: #f57f17;
+    color: orange;
 }
 
 a:hover {
@@ -117,4 +121,8 @@ a:hover {
 
 a:active {
     color: #dcdc51;
+}
+
+html{
+    scroll-behavior: smooth;
 }
