--- a/style.css
+++ b/style.css
@@ -2,30 +2,20 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,400i,700");
 
 body {
-    padding-top: 800px;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
     background-color: red;
 }
 
 #starter {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    height: 800px;
+    height: 100%;
     width: 100%;
     background: radial-gradient(circle,
             rgba(0, 0, 255, 1) 0%,
             rgba(255, 0, 0, 1) 100%);
     display: table;
     z-index: 9;
-}
-
-starter.sectiondiv {
-    display: table-cell;
-    vertical-align: middle;
+    color: white;
 }
 
 img {
@@ -55,7 +45,6 @@ ul {
     font-family: 'Raleway', sans-serif;
     position: fixed;
     top: 0px;
-    right: 30px;
     z-index: 10;
     cursor: pointer;
     background: white;
@@ -74,19 +63,20 @@ li {
 }
 
 li:hover {
-    color: mediumaquamarine;
+    color: aquamarine;
     font-size: 40px;
     text-decoration: underline;
 }
 
-li a:visited{
+li a:visited {
     color: blue;
 }
 
-li a:hover{
-    color: mediumaquamarine; 
-    text-shadow: 2px 2px aquamarine;
+li a:hover {
+    color: aquamarine;
+    text-shadow: 2px 2px mediumaquamarine;
 }
+
 h1,
 h2,
 h3 {
@@ -94,7 +84,8 @@ h3 {
 }
 
 .mont {
-    font-family: 'Montserrat', sans-serif; !important;
+    font-family: 'Montserrat', sans-serif;
+     !important;
 }
 
 h3.bucs {
@@ -117,28 +108,38 @@ h3.bucs {
     color: #b1babf;
 }
 
-a:link - li{
+a:link - li {
     color: #ffd54f;
     text-decoration: none;
 }
 
-a:visited - li{
+a:visited - li {
     color: orange;
 }
 
-a:hover - li{
+a:hover - li {
     color: #cddc39;
 }
 
-a:active - li{
+a:active - li {
     color: #dcdc51;
 }
 
-html{
+html {
     scroll-behavior: smooth;
 }
 
-#contact a{
+#contact a {
     text-decoration: none !important;
     color: #FFDC80 !important;
+}
+
+.my_nav_bar {
+    position: sticky;
+    top: 0;
+    z-index: 99999 !important;
+}
+
+input{
+    background: grey;
 }
